--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
 
 <script>
-  // Initialization
+  // you might want to try changing the approach
   const boxes = Array.from(document.querySelectorAll("td"));
   const inputs = Array.from(document.querySelectorAll("[type=checkbox]"));
   const rows = [1, 2, 3].map((n) =>
